samples/_failures_safe/1761345920_72a2fc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_65f2a80b.c: In function ‘main’:
./samples/SAFE/__tmp_65f2a80b.c:159:61: error: expected ‘)’ at end of input
  159 |             printf("State changed to: %s\n", state_to_string
      |                   ~                                         ^
      |                                                             )
./samples/SAFE/__tmp_65f2a80b.c:159:13: error: expected declaration or statement at end of input
  159 |             printf("State changed to: %s\n", state_to_string
      |             ^~~~~~
./samples/SAFE/__tmp_65f2a80b.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_65f2a80b.c:159:13: error: expected declaration or statement at end of input
